# AI_Media_Production_system

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements-docker.txt
backend/app/: config.py  database.py  main.py
backend/app/agents/: __init__.py  image_agent.py  orchestrator.py  production_agent.py  prompt_agent.py  reviewer_agent.py  script_agent.py  video_agent.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  assets.py  jobs.py  websocket.py
backend/app/crew/: __init__.py  crew_builder.py  tasks.py
backend/app/models/: __init__.py  asset.py  job.py  log.py
backend/app/services/: __init__.py  claude_service.py  elevenlabs_service.py  ffmpeg_service.py  higgsfield_service.py  kling_service.py  midjourney_service.py  runway_service.py  storage_service.py
backend/app/utils/: logger.py  prompts.py  ws_broadcast.py
backend/app/worker/: __init__.py  celery_app.py  tasks.py
backend/tests/: test_agents.py  test_services.py
backend/tests/fixtures/: commercial_brief.json  sample_brief.json
frontend/: .dockerignore  .env.local.example  Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/assets/[jobId]/: page.tsx
frontend/src/app/jobs/: page.tsx
frontend/src/components/: AppNav.tsx  AssetGallery.tsx  JobDetailShell.tsx  JobForm.tsx  LogViewer.tsx  ProgressStepper.tsx  StatusBadge.tsx
frontend/src/lib/: api.ts  socket.ts
frontend/src/types/: index.ts
(+2 files in other folders)
