[tool.poetry]
name = "ai-media-system-backend"
version = "0.1.0"
description = "Backend for AI Media Production System"
authors = ["AI Builder <builder@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.30" }
sqlmodel = "^0.0.21"
psycopg2-binary = "^2.9"
crewai = "^0.80"
anthropic = "^0.40"
celery = { extras = ["redis"], version = "^5.4" }
redis = "^5.0"
structlog = "^24.4"
pydantic-settings = "^2.6"
httpx = "^0.27"
boto3 = "^1.35"
python-multipart = "^0.0.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
